Codehinter popover going behind query manager fix

--- a/frontend/src/_styles/queryManager.scss
+++ b/frontend/src/_styles/queryManager.scss
@@ -45,7 +45,7 @@ $border-radius: 4px;
 }
 
 .query-pane {
-  z-index: 101;
+  z-index: 1;
   height: 350px;
   position: fixed;
   left: 48px;
